--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,25 +1,24 @@
-//
 @import "mixins_variables.less";
-//
-@import "base/normalize.less",
-  "base/base.less",
-  "base/buttons.less",
-  "base/fonts.less";
-//
-@import "blocks/body-page.less",
-  "blocks/page-header.less",
-  "blocks/header-logo.less",
-  "blocks/main-nav.less",
-  "blocks/page-title.less",
-  "blocks/catalog-menu.less",
-  "blocks/popular.less",
-  "blocks/review.less",
-  "blocks/info.less",
-  "blocks/contact.less",
-  "blocks/order.less",
-  "blocks/video.less",
-  "blocks/catalog.less",
-  "blocks/page-footer.less",
-  "blocks/footer-logo.less",
-  "blocks/social.less",
-  "blocks/copyright.less";
+
+@import "base/normalize.less";
+@import "base/base.less";
+@import "base/buttons.less";
+@import "base/fonts.less";
+
+@import "blocks/body-page.less";
+@import "blocks/page-header.less";
+@import "blocks/header-logo.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-title.less";
+@import "blocks/catalog-menu.less";
+@import "blocks/popular.less";
+@import "blocks/review.less";
+@import "blocks/info.less";
+@import "blocks/contact.less";
+@import "blocks/order.less";
+@import "blocks/video.less";
+@import "blocks/catalog.less";
+@import "blocks/page-footer.less";
+@import "blocks/footer-logo.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
