--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,7 +12,7 @@
 @import "blocks/page-title.less";
 @import "blocks/catalog-menu.less";
 @import "blocks/popular.less";
-@import "blocks/review.less";
+@import "blocks/reviews.less";
 @import "blocks/info.less";
 @import "blocks/contact.less";
 @import "blocks/order.less";
