--- a/source/less/base/buttons.less
+++ b/source/less/base/buttons.less
@@ -4,11 +4,11 @@
   width: 260px;
   min-height: 53px;
   padding-top: 16px;
-  border: 2px solid $color-text;
+  border: 2px solid #444444;
 
-  font-family: $font-title;
+  font-family: @font-title;
   .font (17px, 20px, 700, normal);
-  color: $color-text;
+  color: #444444;
   text-align: center;
   text-transform: uppercase;
 
