--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,11 +1,10 @@
 .contact {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  width: 320px;
+  margin: 40px auto;
 }
 
 .contact__wrapper {
-  width: 260px;
-  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .contact__title {
@@ -27,11 +26,9 @@
 }
 
 .contact__map {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin: 40px auto;
 }
 
 .contact__write {
   width: 260px;
-  margin: 0 auto;
 }
