--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,7 +4,7 @@
 }
 
 .copyright__text {
-  .font(18px, 18px, 700, normal);
+  .font(19px, 18px, 700, normal);
   color: #000000;
   
   &::before {
@@ -16,6 +16,7 @@
 }
 
 .copyright__link {
+  border: none;
   color: rgba(0, 0, 0, 1);
 
   &:hover svg,
