--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -12,7 +12,7 @@
   width: 20px;
   height: 14px;
 
-  .background("../img/icon-menu-open"); 
+  .background("../img/icon-menu-open.svg"); 
   background-color: transparent;
   border: none;
 }
