--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -44,8 +44,10 @@
 
 .reviews__btn {
   min-height: 52px;
+  width: 126px;
   border: 1px solid #ececec;
-  background-position: 0 50%;
+  background-position: 50%;
+  background-color: transparent;
 }
 
 .reviews__prev {
