--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,8 @@
+.social {
+  padding-top: 30px;
+  padding-bottom: 30px;  
+}
+
 .social__list {
   .list-reset();
 
@@ -6,7 +11,6 @@
   flex-wrap: wrap;
   width: 145px;
   margin: 0 auto;
-  margin-bottom: 47px;
 }
 
 .social__link {
