--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -1,8 +1,11 @@
 .page-footer {
   min-height: 160px;
-  background-color: red;
+  width: 320px;
+  margin: 0 auto;
 }
 
 .page-footer__wrapper {
   padding: 0 30px;
+  
+  background-color: red;
 }
