--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -4,7 +4,8 @@
 }
 
 .catalog__wrapper {
-  margin: 30px 0;
+  margin: 0 auto;
+  width: 260px;
 }
 
 .catalog-list {
@@ -13,6 +14,7 @@
 
 .catalog-item {
   border: 1px solid #ececec;
+  margin-bottom: 30px;
 }
 
 .catalog-item__title {
