--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -11,7 +11,7 @@
 .info__title {
   margin-top: 25px;
   
-  .font(15px, 20px, 700, normal);
+  .font(25px, 30px, 700, normal);
   color: #000000;
 }
 
@@ -26,6 +26,7 @@
   padding-top: 55px;
   
   &--eco::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -37,6 +38,7 @@
   }
   
   &--style::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -48,6 +50,7 @@
   }
   
   &--like::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -59,6 +62,7 @@
   }
   
   &--knit::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -70,6 +74,7 @@
   }
   
   &--rocket::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -81,6 +86,7 @@
   }
   
   &--gift::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
