--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -1,15 +1,18 @@
 .page-title {
   min-height: 177px;
-  padding: 0 39px;
+  margin: 0;
+  padding: 0 35px;
   padding-top: 70px;
   
   font-family: @font-title;
   .font(27px, 30px, 700, normal);
-  color: $color-title; /*#010000*/
+  text-align: center;
+  color: #010000;
+  background-color: #63d1bb;
   
   &--img {
     min-height: 285px;
-    .background("../img/hero-mobile.svg");
-    background-position: 0 50%;
+    .background("../img/hero-mobile.jpg");
+    background-position: 50% 0;
   }
 }
