--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,9 +20,10 @@
 @import "blocks/reviews.less";
 @import "blocks/info.less";
 @import "blocks/contact.less";
-@import "blocks/order.less";
+@import "blocks/form-order.less";
 @import "blocks/video.less";
 @import "blocks/catalog.less";
 @import "blocks/footer-logo.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/modal.less";
