--- a/source/less/base/base.less
+++ b/source/less/base/base.less
@@ -10,6 +10,10 @@ html {
 
 body {
   margin: 0;
+  
+  font-family: @font-text;
+  font-weight: 700;
+  letter-spacing: normal;
 }
 
 img {
@@ -18,6 +22,7 @@ img {
 
 a {
   text-decoration: none;
+  font-family: @font-text;
 }
 
 .visually-hidden {
