--- a/source/less/base/buttons.less
+++ b/source/less/base/buttons.less
@@ -1,25 +1,31 @@
 .button {
   display: block;
-  margin: 0 auto;
   width: 260px;
-  min-height: 53px;
-  padding-top: 16px;
-  border: 2px solid #444444;
+  min-height: 52px;
+  margin: 0 auto;
+  padding: 0;
+  padding-top: 15px;
+  border: 2px solid @color-text;
 
-  font-family: @font-title;
-  .font (17px, 20px, 700, normal);
-  color: #444444;
+  font-family: @font-text;
+  .font (17px, 20px);
+  color: @color-text;
   text-align: center;
   text-transform: uppercase;
 
   &:hover,
   &:focus {
-    color: #ffffff;
-    background-color: #444444;
+    color: @color-white;
+    background-color: @color-text;
     cursor: pointer;
   }
 
   &:active {
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(@color-white, 0.3);
   }
+}
+
+.button-submit {
+  padding-top: 0;
+  background-color: @color-white;
 }
