--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -8,25 +8,32 @@
 }
 
 .contact__title {
-  margin-bottom: 40px;
+  margin-bottom: 26px;
 
-  .font(18px, 30px, 700, normal);
-  color: #000000;
+  .font(18px, 30px);
+  color: @color-black;
 }
 
 .contact__list {
   .list-reset ();
   
-  .font(15px, 30px, 400, normal);
-  color: #444444;
+  .font(15px, 30px);
+  font-weight: 400;
+  color: @color-text;
 }
 
 .contact-list__item {
-  width: 75px;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 30px;
+}
+
+.contact-list__item-info {
+  margin-right: 30px;
 }
 
 .contact__map {
-  margin: 40px auto;
+  margin-bottom: 43px;
 }
 
 .contact__write {
