--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,30 +1,34 @@
 .copyright {
-  min-height: 80px;
+  display: flex;
+  justify-content: space-between;
   padding: 0 40px;
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
 
 .copyright__text {
-  .font(19px, 18px, 700, normal);
-  color: #000000;
+  .font(19px, 18px);
+  color: @color-black;
   
   &::before {
     content: "";
     height: 1px;
     width: 260px;
-    background-color: #f1f1f1;
+    background-color: @color-white-dark;
   }
 }
 
 .copyright__link {
+  padding-top: 0;
   border: none;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(@color-black, 1);
 
   &:hover svg,
   &:focus svg {
-    color: rgba(70, 193, 174, 1);
+    color: rgba(#46c1ae, 1);
   }
 
   &:active svg {
-    color: rgba(70, 193, 174, 0.3);
+    color: rgba(#46c1ae, 0.3);
   }
 }
