--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -10,9 +10,10 @@
 
 .info__title {
   margin-top: 25px;
+  margin-bottom: 31px;
   
-  .font(25px, 30px, 700, normal);
-  color: #000000;
+  .font(25px, 30px);
+  color: @color-black;
 }
 
 .info__list {
@@ -22,14 +23,14 @@
 .info__item {
   position: relative;
 
-  margin-bottom: 16px;
-  padding-top: 55px;
+  margin-bottom: 30px;
+  padding-top: 53px;
   
   &--eco::after {
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    left: 8px;
 
     width: 32px;
     height: 37px;
@@ -52,8 +53,8 @@
   &--like::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 6px;
+    left: 8px;
 
     width: 33px;
     height: 28px;
@@ -64,8 +65,8 @@
   &--knit::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 2px;
+    left: 3px;
 
     width: 35px;
     height: 35px;
@@ -76,8 +77,8 @@
   &--rocket::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 4px;
+    left: -6px;
 
     width: 54px;
     height: 23px;
@@ -88,8 +89,8 @@
   &--gift::after {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 1px;
+    left: 3px;
 
     width: 33px;
     height: 33px;
@@ -99,6 +100,6 @@
 }
 
 .info__link {
-  .font(17px, 20px, 700, normal);
-  color: #000000;
+  .font(17px, 20px);
+  color: @color-black;
 }
