--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,4 +1,5 @@
 .main-nav__wrapper {
+  display: none;
   width: 320px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -6,8 +7,8 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: 20px;
-  right: 14px;
+  top: 32px;
+  right: 31px;
 
   width: 20px;
   height: 14px;
@@ -26,5 +27,5 @@
 
   text-align: left;
 
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid @color-grey;
 }
