--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -4,11 +4,10 @@
   padding: 0 35px;
   padding-top: 70px;
   
-  font-family: @font-title;
-  .font(27px, 30px, 700, normal);
+  .font(27px, 30px);
   text-align: center;
-  color: #010000;
-  background-color: #63d1bb;
+  color: @color-black;
+  background-color: @color-white-dark;
   
   &--img {
     min-height: 285px;
