--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,6 @@
 .social {
   padding-top: 30px;
-  padding-bottom: 30px;  
+  padding-bottom: 15px;
 }
 
 .social__list {
@@ -9,19 +9,19 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 145px;
+  width: 180px;
   margin: 0 auto;
 }
 
 .social__link {
-  color: rgba(0, 0, 0, 1);
+  color: rgba(@color-black, 1);
 
   &:hover svg,
   &:focus svg {
-    color: rgba(70, 193, 174, 1);
+    color: rgba(#46c1ae, 1);
   }
 
   &:active svg {
-    color: rgba(70, 193, 174, 0.3);
+    color: rgba(#46c1ae, 0.3);
   }
 }
