--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,6 +17,7 @@
 @import "blocks/page-title.less";
 @import "blocks/catalog-menu.less";
 @import "blocks/popular.less";
+@import "blocks/table.less";
 @import "blocks/reviews.less";
 @import "blocks/info.less";
 @import "blocks/contact.less";
