--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,17 +1,17 @@
 @import "mixins_variables.less";
-
+//
 @import "base/normalize.less";
 @import "base/base.less";
 @import "base/buttons.less";
 @import "base/fonts.less";
-
+//
 @import "layout/body-page.less";
 @import "layout/page-main.less";
 @import "layout/page-catalog.less";
 @import "layout/page-order.less";
 @import "layout/page-header.less";
 @import "layout/page-footer.less";
-
+//
 @import "blocks/header-logo.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-title.less";
