--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -1,5 +1,14 @@
 .form-order {
-  display: none;
+//  display: none;
+}
+
+.form-order__desc {
+  margin: 21px 0;
+  padding: 0 30px;
+  .font(13px, 24px);
+  font-weight: 400;
+  text-align: left;
+  color: @color-text;
 }
 
 .form-order__btn {
