--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -11,7 +11,7 @@
 
   &--img {
     min-height: 285px;
-    .background("../img/hero-mobile.jpg");
+    .background("../img/hero-mobile@1x.jpg");
     background-position: 50% 0;
   }
 }
