--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -32,6 +32,21 @@
   margin-right: 30px;
 }
 
+.contact__mail {
+  color: @color-text;
+  border-bottom: 1px solid @color-green;
+
+  &:hover,
+  &:focus {
+    color: @color-green-alternative-hover;
+  }
+
+  &:active {
+    color: @color-green-alternative-hover;
+    opacity: 0.3;
+  }
+}
+
 .contact__map {
   margin-bottom: 43px;
 }
