--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,7 @@
 .social {
   padding-top: 30px;
   padding-bottom: 15px;
+  border-bottom: 1px solid @color-grey;
 }
 
 .social__list {
@@ -18,10 +19,10 @@
 
   &:hover svg,
   &:focus svg {
-    color: rgba(#46c1ae, 1);
+    fill: rgba(@color-green-alternative-hover, 1);
   }
 
   &:active svg {
-    color: rgba(#46c1ae, 0.3);
+    fill: rgba(@color-green-alternative-hover, 0.3);
   }
 }
