--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,6 +22,12 @@
 @import "blocks/info.less";
 @import "blocks/contact.less";
 @import "blocks/form-order.less";
+@import "blocks/type.less";
+@import "blocks/color.less";
+@import "blocks/personal";
+@import "blocks/phone.less";
+@import "blocks/email.less";
+@import "blocks/textarea.less";
 @import "blocks/video.less";
 @import "blocks/catalog.less";
 @import "blocks/footer-logo.less";
