--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -16,8 +16,27 @@
   text-align: left;
   color: @color-white;
 
+  &:hover,
+  &:focus svg {
+    opacity: 0.7;
+  }
+
+  &:active svg {
+    opacity: 0.3;
+  }
+
   &--decoration {
     background-color: @color-green;
+  }
+
+  &--decoration:hover,
+  &--decoration:focus {
+    background-color: @color-green-hover;
+  }
+
+  &--decoration:active {
+    background-color: @color-green-hover;
+    opacity: 0.3;
   }
 
   &--decoration svg {
@@ -27,11 +46,22 @@
 
     width: 40px;
     height: 62px;
+    opacity: 0.5;
     fill: #149080;
   }
 
   &--toys {
     background-color: @color-green-alternative;
+  }
+
+  &--toys:hover,
+  &--toys:focus {
+    background-color: @color-green-alternative-hover;
+  }
+
+  &--toys:active {
+    background-color: @color-green-alternative-hover;
+    opacity: 0.3;
   }
 
   &--toys svg {
@@ -41,6 +71,7 @@
 
     width: 60px;
     height: 60px;
+    opacity: 0.5;
     fill: #149080;
   }
 }
