--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -2,13 +2,58 @@
 //  display: none;
 }
 
+.form-order__fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+  overflow: hidden;
+}
+
+.form-order__legend {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  .font (17px, 16px);
+  text-transform: uppercase;
+  color: @color-green;
+  
+  &::after {
+    content: "";
+    position: absolute;
+    top: 7px;
+    width: 100%;
+    height: 1px;
+    background-color: @color-green;
+  }
+}
+
 .form-order__desc {
   margin: 21px 0;
-  padding: 0 30px;
+  margin-bottom: 25px;
+  padding: 0;
   .font(13px, 24px);
   font-weight: 400;
   text-align: left;
   color: @color-text;
+}
+
+.form-order__label {
+  position: relative;
+  display: block;
+  padding-left: 62px;
+  .font (19px, 18px);
+  color: @color-text;
+}
+
+.form-order__text {
+  margin: 0;
+  margin-top: 9px;
+  margin-bottom: 30px;
+  padding: 0;
+  .font (14px, 16px);
+  font-weight: 400;
+  color: $color-text;
 }
 
 .form-order__btn {
