--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -15,3 +15,16 @@
     background-position: 50% 0;
   }
 }
+
+@media (min-width: 768px) {
+  .page-title {
+    padding-top: 157px;
+    .font(43px, 50px);
+
+    &--img {
+      min-height: 640px;
+      .background("../img/hero-tablet@1x.jpg");
+      background-position: 50% 0;
+    }
+  }
+}
