--- a/source/less/layout/page-header.less
+++ b/source/less/layout/page-header.less
@@ -5,3 +5,10 @@
   width: 320px;
   margin: 0 auto;
 }
+
+@media (min-width: 768px) {
+  .page-header {
+    min-height: 89px;
+    width: 768px;
+  }
+}
