--- a/source/less/blocks/personal.less
+++ b/source/less/blocks/personal.less
@@ -4,6 +4,7 @@
   &::after {
     left: 62px;
   }
+}
 
 .personal__list {
   .list-reset ();
@@ -16,6 +17,7 @@
   :last-child {
     margin-bottom: 0;
   }
+}
 
 .personal__input-label {
   padding-left: 0;
