--- a/source/less/blocks/phone.less
+++ b/source/less/blocks/phone.less
@@ -9,6 +9,7 @@
   &::after {
     left: 62px;
   }
+}
 
 .phone__label {
   content: "";
@@ -17,9 +18,10 @@
   right: 8px;
 
   & svg {
-  width: 25px;
-  height: 24px;
-  opacity: 0.2;
+    width: 25px;
+    height: 24px;
+    opacity: 0.2;
+  }
 }
 
 .phone__input:hover + .phone__label svg {
