--- a/source/less/blocks/textarea.less
+++ b/source/less/blocks/textarea.less
@@ -8,6 +8,7 @@
   &::after {
     left: 62px;
   }
+}
 
 .textarea__field {
   margin: 0;
@@ -28,7 +29,7 @@
   }
 
   &:placeholder:hover {
-    border: 2px solid @color-green;;
+    border: 2px solid @color-green;
   }
 
   &:placeholder:focus {
