--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -17,7 +17,7 @@
   .font (17px, 16px);
   text-transform: uppercase;
   color: @color-green;
-  
+
   &::after {
     content: "";
     position: absolute;
@@ -53,7 +53,7 @@
   padding: 0;
   .font (14px, 16px);
   font-weight: 400;
-  color: $color-text;
+  color: @color-text;
 }
 
 .form-order__btn {
