--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -26,3 +26,9 @@
     fill: rgba(@color-green-alternative-hover, 0.3);
   }
 }
+
+@media (min-width: 768px) {
+  .social {
+    border-bottom: none;
+  }
+}
