--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -9,3 +9,28 @@
 
   background-color: @color-white-dark;
 }
+
+@media (min-width: 768px) {
+  .page-footer {
+    width: 768px;
+  }
+
+  .page-footer__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+    min-height: 143px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .page-footer {
+    width: 1150px;
+  }
+
+  .page-footer__wrapper {
+    padding: 0 50px;
+    min-height: 143px;
+  }
+}
