--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -32,20 +32,20 @@
   list-style: none;
 }
 
-body {
-  background: url("../img/mishka-index-mobile.jpg") no-repeat 50% 0;
-  background-size: 320px auto;
-  min-height: 750px;
-}
-@media (min-width: 768px) {
-  body {
-    background: url("../img/mishka-index-tablet.jpg") no-repeat 50% 0;
-    background-size: 768px auto;
-  }
-}
-@media (min-width: 1200px) {
-  body {
-    background: url("../img/mishka-index-desktop.jpg") no-repeat 50% 0;
-    background-size: 1391px auto;
-  }
-}
+//body {
+//  background: url("../img/mishka-form-mobile.jpg") no-repeat 50% 0;
+//  background-size: 320px auto;
+//  min-height: 750px;
+//}
+//@media (min-width: 768px) {
+//  body {
+//    background: url("../img/mishka-form-tablet.jpg") no-repeat 50% 0;
+//    background-size: 768px auto;
+//  }
+//}
+//@media (min-width: 1150px) {
+//  body {
+//    background: url("../img/mishka-form-desktop.jpg") no-repeat 50% 0;
+//    background-size: 1150px auto;
+//  }
+//}
