--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -95,3 +95,119 @@
     opacity: 0.3;
   }
 }
+
+@media (min-width: 768px) {
+  .catalog {
+    margin-top: 81px;
+    margin-bottom: 30px;
+  }
+
+  .catalog__wrapper {
+    width: 668px;
+  }
+
+  .catalog-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 54px;
+    height: 334px;
+  }
+
+  .catalog-item__img {
+    width: 332px;
+    height: 332px;
+  }
+
+  .catalog-item__img-hare {
+    content: url(../img/photo-hare-tablet@1x.jpg);
+  }
+
+  .catalog-item__img-bowl {
+    content: url(../img/photo-bowl-tablet@1x.jpg);
+  }
+
+  .catalog-item__img-toys {
+    content: url(../img/photo-toys-tablet@1x.jpg);
+  }
+
+  .catalog-item__wrapper-desc {
+    padding: 0 26px;
+    width: 332px;
+  }
+
+  .catalog-item__title {
+    margin-top: 25px;
+    padding: 0;
+
+    & a {
+      .font(20px, 24px);
+    }
+  }
+
+  .catalog-item__description {
+    padding: 0;
+    .font(15px, 30px);
+  }
+
+  .catalog-item__price-wrapper {
+    margin: 0;
+  }
+
+  .catalog-item__price {
+    padding-top: 2px;
+    padding-left: 5px;
+    .font(17px, 24px);
+  }
+
+  .catalog-item__btn-add {
+    top: 2px;
+    right: 6px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .catalog {
+    margin-top: 132px;
+    margin-bottom: 37px;
+  }
+
+  .catalog__wrapper {
+    width: 1050px;
+  }
+
+  .catalog-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .catalog-item {
+    display: block;
+    height: 659px;
+    width: 316px;
+    margin-right: 51px;
+    margin-bottom: 20px;
+  }
+
+  .catalog-item:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  .catalog-item__img {
+    width: 314px;
+    height: 462px;
+  }
+
+  .catalog-item__img-hare {
+    content: url(../img/photo-hare-desktop@1x.jpg);
+  }
+
+  .catalog-item__img-bowl {
+    content: url(../img/photo-bowl-desktop@1x.jpg);
+  }
+
+  .catalog-item__img-toys {
+    content: url(../img/photo-toys-desktop@1x.jpg);
+  }
+}
