--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,9 @@
 .copyright {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 40px;
-  padding-top: 30px;
+  padding-top: 14px;
   padding-bottom: 15px;
 }
 
@@ -19,7 +20,10 @@
 }
 
 .copyright__link {
-  padding-top: 0;
+  padding-top: 11px;
+  margin: 0;
+  min-height: 34px;
+  width: 27px;
   border: none;
   color: rgba(@color-black, 1);
 
@@ -35,5 +39,12 @@
 
   &:active svg {
     fill: rgba(@color-green-alternative-hover, 0.3);
+  }
+}
+
+@media (min-width: 768px) {
+  .copyright {
+    padding: 0;
+    width: 183px;
   }
 }
