--- a/source/less/blocks/header-logo.less
+++ b/source/less/blocks/header-logo.less
@@ -1,8 +1,6 @@
 .header-logo {
   display: block;
-
   margin: 0 auto;
-
   padding-top: 22px;
   text-align: center;
 
@@ -19,4 +17,24 @@
 .header-logo__logo-image {
   width: 86px;
   height: 35px;
+}
+
+@media (min-width: 768px) {
+  .header-logo__logo-image {
+    content: url("../img/logo-tablet.svg");
+    width: 112px;
+    height: 46px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .header-logo {
+    padding-top: 9px;
+  }
+
+  .header-logo__logo-image {
+    content: url("../img/logo-desktop.svg");
+    width: 148px;
+    height: 72px;
+  }
 }
