--- a/source/less/layout/page-catalog.less
+++ b/source/less/layout/page-catalog.less
@@ -2,3 +2,15 @@
   width: 320px;
   margin: 0 auto;
 }
+
+@media (min-width: 768px) {
+  .page-catalog {
+    width: 768px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .page-catalog {
+    width: 1150px;
+  }
+}
