--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,9 @@
 //
 @import "blocks/header-logo.less";
 @import "blocks/main-nav.less";
+@import "blocks/site-list.less";
+@import "blocks/user-list.less";
+@import "blocks/offer-list.less";
 @import "blocks/page-title.less";
 @import "blocks/catalog-menu.less";
 @import "blocks/popular.less";
