доработка для тревиса

--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -90,7 +90,7 @@
   }
 
   .video__img {
-    content: url(../img/video-tablet@1x.jpg);
+    content: url("../img/video-tablet@1x.jpg");
     width: 668px;
     height: 455px;
   }
@@ -132,7 +132,7 @@
   }
 
   .video__img {
-    content: url(../img/video-desktop@1x.jpg);
+    content: url("../img/video-desktop@1x.jpg");
     width: 682px;
     height: 453px;
   }
