--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -75,7 +75,7 @@
 
 .catalog-item__btn-add {
   position: absolute;
-  top: 0px;
+  top: 0;
   right: 0;
   height: 19px;
   width: 20px;
@@ -121,15 +121,15 @@
   }
 
   .catalog-item__img-hare {
-    content: url(../img/photo-hare-tablet@1x.jpg);
+    content: url("../img/photo-hare-tablet@1x.jpg");
   }
 
   .catalog-item__img-bowl {
-    content: url(../img/photo-bowl-tablet@1x.jpg);
+    content: url("../img/photo-bowl-tablet@1x.jpg");
   }
 
   .catalog-item__img-toys {
-    content: url(../img/photo-toys-tablet@1x.jpg);
+    content: url("../img/photo-toys-tablet@1x.jpg");
   }
 
   .catalog-item__wrapper-desc {
@@ -200,14 +200,14 @@
   }
 
   .catalog-item__img-hare {
-    content: url(../img/photo-hare-desktop@1x.jpg);
+    content: url("../img/photo-hare-desktop@1x.jpg");
   }
 
   .catalog-item__img-bowl {
-    content: url(../img/photo-bowl-desktop@1x.jpg);
+    content: url("../img/photo-bowl-desktop@1x.jpg");
   }
 
   .catalog-item__img-toys {
-    content: url(../img/photo-toys-desktop@1x.jpg);
+    content: url("../img/photo-toys-desktop@1x.jpg");
   }
 }
