--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -97,7 +97,7 @@
   }
 
   .contact__map {
-    content: url(../img/map-tablet@1x.jpg);
+    content: url("../img/map-tablet@1x.jpg");
     width: 768px;
     height: 457px;
     margin-bottom: 52px;
@@ -146,7 +146,7 @@
   }
 
   .contact__map {
-    content: url(../img/map-desktop@1x.jpg);
+    content: url("../img/map-desktop@1x.jpg");
     position: absolute;
     top: 70px;
     right: 0;
