--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -78,14 +78,11 @@
 }
 
 .catalog-menu__link {
-  //*padding-right: 160px;*/
+  display: block;
+  width: 120px;
 }
 
 @media (min-width: 768px) {
-  .catalog-menu {
-    margin-top: -103px;
-  }
-
   .catalog-menu__wrapper {
     width: 668px;
   }
@@ -111,10 +108,6 @@
 }
 
 @media (min-width: 1150px) {
-  .catalog-menu {
-    margin-top: -120px;
-  }
-
   .catalog-menu__wrapper {
     width: 1050px;
   }
