--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -37,7 +37,7 @@
 
 .catalog-item__description {
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 24px;
   padding: 0 30px;
   .font(13px, 30px);
   font-weight: 400;
@@ -53,14 +53,17 @@
 
 .catalog-item__price-wrapper {
   position: relative;
-  margin: 0 30px;
-  margin-top: 40px;
-  margin-bottom: 28px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 27px;
+  margin-top: 24px;
+  margin-bottom: 14px;
 
   &::before {
     content: "";
     position: absolute;
-    top: -21px;
+    top: -5px;
     left: 0;
     height: 1px;
     width: 100%;
@@ -74,9 +77,6 @@
 }
 
 .catalog-item__btn-add {
-  position: absolute;
-  top: 0;
-  right: 0;
   height: 19px;
   width: 20px;
 
@@ -133,8 +133,12 @@
   }
 
   .catalog-item__wrapper-desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 0 26px;
     width: 332px;
+    min-height: 323px;
   }
 
   .catalog-item__title {
@@ -209,5 +213,14 @@
 
   .catalog-item__img-toys {
     content: url("../img/photo-toys-desktop@1x.jpg");
+  }
+
+  .catalog-item__description {
+    margin: 0;
+  }
+
+  .catalog-item__wrapper-desc {
+    width: 307px;
+    min-height: 184px;
   }
 }
