--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -3,16 +3,17 @@
   margin: 0;
   padding: 0 35px;
   padding-top: 70px;
-
   .font(27px, 30px);
   text-align: center;
   color: @color-black;
-  background-color: @color-white-dark;
 
-  &--img {
-    min-height: 285px;
-    .background("../img/hero-mobile@1x.jpg");
-    background-position: 50% 0;
+  &--color {
+    background-color: @color-white-dark;
+  }
+
+  &--index {
+    min-height: 282px;
+    margin: 0 auto;
   }
 }
 
@@ -24,11 +25,10 @@
     min-height: 223px;
     .font(43px, 50px);
 
-    &--img {
+    &--index {
       padding-top: 153px;
-      min-height: 744px;
-      .background("../img/hero-tablet@1x.jpg");
-      background-position: 50% 0;
+      min-height: 642px;
+      width: 500px;
     }
   }
 }
@@ -39,11 +39,10 @@
     min-height: 250px;
     .font(53px, 57px);
 
-    &--img {
+    &--index {
       padding-top: 153px;
-      min-height: 746px;
-      .background("../img/hero-desktop@1x.jpg");
-      background-position: 50% 0;
+      min-height: 626px;
+      width: 630px;
     }
   }
 }
