--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -3,6 +3,13 @@
   margin: 0 auto;
 }
 
+.page-main__wrapper-background {
+  min-height: 285px;
+  background-color: @color-white-dark;
+  .background("../img/hero-mobile@1x.jpg");
+  background-position: 50% 0;
+}
+
 .popular {
   position: relative;
 
@@ -38,6 +45,13 @@
     width: 768px;
   }
 
+  .page-main__wrapper-background {
+    min-height: 744px;
+    margin-top: -63px;
+    .background("../img/hero-tablet@1x.jpg");
+    background-position: 50% 0;
+  }
+
   .popular::before {
     bottom: -50px;
     height: 15px;
@@ -52,6 +66,12 @@
 @media (min-width: 1150px) {
   .page-main {
     width: 1150px;
+  }
+
+  .page-main__wrapper-background {
+    min-height: 746px;
+    .background("../img/hero-desktop@1x.jpg");
+    background-position: 50% 0;
   }
 
   .popular::before {
