--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -82,7 +82,7 @@
   width: 120px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .catalog-menu__wrapper {
     width: 668px;
   }
@@ -107,7 +107,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .catalog-menu__wrapper {
     width: 1050px;
   }
