--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -55,7 +55,7 @@
   width: 260px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .contact {
     margin-bottom: 57px;
     width: 768px;
@@ -108,7 +108,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .contact {
     position: relative;
     margin-bottom: 105px;
