--- a/source/less/blocks/header-logo.less
+++ b/source/less/blocks/header-logo.less
@@ -19,7 +19,7 @@
   height: 35px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .header-logo__logo-image {
     content: url("../img/logo-tablet.svg");
     width: 112px;
@@ -27,7 +27,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .header-logo {
     padding-top: 9px;
   }
