--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -104,7 +104,7 @@
   color: @color-black;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .info {
     margin-top: 100px;
   }
@@ -157,7 +157,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .info {
     margin-top: 155px;
   }
