--- a/source/less/blocks/popular.less
+++ b/source/less/blocks/popular.less
@@ -54,7 +54,7 @@
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .popular {
     margin-top: 47px;
   }
@@ -124,7 +124,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .popular {
     margin-top: 70px;
   }
