--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -10,7 +10,7 @@
   background-color: @color-white-dark;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-footer {
     width: 768px;
   }
@@ -24,7 +24,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .page-footer {
     width: 1150px;
   }
