--- a/source/less/layout/page-header.less
+++ b/source/less/layout/page-header.less
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-header {
     min-height: 89px;
     width: 768px;
@@ -19,7 +19,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .page-header {
     min-height: 89px;
     width: 1150px;
