--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -40,7 +40,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-main {
     width: 768px;
   }
@@ -63,7 +63,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .page-main {
     width: 1150px;
   }
