--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -96,7 +96,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .catalog {
     margin-top: 81px;
     margin-bottom: 30px;
@@ -171,7 +171,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .catalog {
     margin-top: 132px;
     margin-bottom: 37px;
