--- a/source/less/blocks/footer-logo.less
+++ b/source/less/blocks/footer-logo.less
@@ -2,7 +2,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .footer-logo {
     padding-right: 78px;
   }
