--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -9,12 +9,22 @@
   position: absolute;
   top: 32px;
   right: 31px;
-
+  z-index: 2;
+  display: block;
   width: 20px;
   height: 14px;
-  .background("../img/icon-menu-open.svg");
   background-color: transparent;
   border: none;
+}
+
+.main-nav--closed .main-nav__toggle {
+  .background("../img/icon-menu-open.svg");
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 29px;
+  height: 20px;
+  .background("../img/icon-menu-close.svg");
 }
 
 .main-nav__list {
@@ -29,7 +39,58 @@
   border-bottom: 1px solid @color-grey;
 }
 
-@media (min-width: 768px) {
+@media (max-width: @mobile-width-only) {
+
+  .main-nav--closed .site-list__item {
+    display: none;
+
+    &--active {
+      display: block;
+    }
+  }
+
+  .main-nav--closed .site-list__item--active a {
+    padding-right: 70px;
+    padding-left: 70px;
+  }
+
+  .main-nav--closed .user-list__item {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    top: 79px;
+    right: 0;
+    z-index: 10;
+    min-height: 396px;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+
+  .main-nav--nojs .site-list__item--active a {
+    padding-right: 21px;
+    padding-left: 21px;
+    text-align: left;
+  }
+
+  .main-nav--nojs .user-list__item {
+    display: block;
+  }
+}
+
+@media (min-width: @tablet-width) {
   .main-nav__toggle {
     display: none;
   }
@@ -51,7 +112,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .main-nav__wrapper {
     width: 1150px;
     flex-direction: row;
