--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -17,7 +17,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-title {
     margin-top: -63px;
     padding: 0;
@@ -33,7 +33,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .page-title {
     padding-top: 94px;
     min-height: 250px;
