--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -80,7 +80,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .reviews {
     margin-top: 24px;
     min-height: 457px;
@@ -135,7 +135,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .reviews {
     margin-top: 31px;
     margin-bottom: 92px;
