--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,4 +1,30 @@
-@media (min-width: 768px) {
+.site-list a {
+  display: block;
+  padding: 12px 21px;
+  padding-bottom: 13px;
+
+  .font(15px, 24px);
+  color: @color-black;
+  text-decoration: none;
+
+  background-color: transparent;
+  border-top: 1px solid @color-grey;
+  border-bottom: 1px solid @color-grey;
+}
+
+.site-list a[href] {
+  &:hover {
+    color: rgba(255, 255, 255, 0.6);
+    border-top-color: @color-grey;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+    border-top-color: @color-grey;
+  }
+}
+
+@media (min-width: @tablet-width) {
   .site-list {
     order: 1;
     display: flex;
@@ -19,7 +45,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .site-list {
     order: 0;
     margin-right: 80px;
