--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .user-list {
     order: 1;
     display: flex;
@@ -33,7 +33,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .user-list {
     order: 0;
   }
