--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -76,7 +76,7 @@
   width: 192px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .video__wrapper {
     display: flex;
     flex-direction: column;
@@ -119,7 +119,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .video__wrapper {
     padding-bottom: 45px;
     width: 1050px;
