--- a/source/less/layout/page-catalog.less
+++ b/source/less/layout/page-catalog.less
@@ -3,13 +3,13 @@
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-catalog {
     width: 768px;
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: @desktop-width) {
   .page-catalog {
     width: 1150px;
   }
