--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -84,7 +84,19 @@
 
 @media (min-width: @tablet-width) {
   .catalog-menu__wrapper {
+    position: relative;
     width: 668px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 13px;
+      width: 100%;
+      .background("../img/bg-zigzag-fill.svg");
+      background-size: cover;
+    }
   }
 
   .catalog-menu__list {
