--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav__wrapper {
-  display: none;
   width: 320px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -39,6 +38,10 @@
   border-bottom: 1px solid @color-grey;
 }
 
+.main-nav__delivery {
+  display: none;
+}
+
 @media (max-width: @mobile-width-only) {
 
   .main-nav--closed .site-list__item {
@@ -47,11 +50,11 @@
     &--active {
       display: block;
     }
-  }
-
-  .main-nav--closed .site-list__item--active a {
-    padding-right: 70px;
-    padding-left: 70px;
+ 
+    &--active a {
+      padding-right: 70px;
+      padding-left: 70px;
+    }
   }
 
   .main-nav--closed .user-list__item {
@@ -59,11 +62,11 @@
   }
 
   .main-nav--opened .main-nav__wrapper {
-    position: absolute;
+    position: static;
     top: 79px;
     right: 0;
     z-index: 10;
-    min-height: 396px;
+    min-height: 306px;
   }
 
   .main-nav--nojs .main-nav__toggle {
@@ -106,6 +109,7 @@
     position: absolute;
     bottom: 7px;
     right: 50px;
+    display: block;
     .font(15px, 24px);
     font-weight: 400;
     color: @color-text;
