--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,9 +1,10 @@
 .site-list a {
   display: block;
-  padding: 12px 21px;
-  padding-bottom: 13px;
+  padding: 45px 30px;
+  padding-left: 75px;
+  padding-bottom: 8px;
 
-  .font(15px, 24px);
+  .font(17px, 24px);
   color: @color-black;
   text-decoration: none;
 
@@ -14,12 +15,12 @@
 
 .site-list a[href] {
   &:hover {
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(0, 0, 0, 0.6);
     border-top-color: @color-grey;
   }
 
   &:active {
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(0, 0, 0, 0.3);
     border-top-color: @color-grey;
   }
 }
